Fixed the Facebook buttons integration problem and improved the documentation content.

--- a/_includes/facebook_buttons.html
+++ b/_includes/facebook_buttons.html
@@ -1,16 +1,18 @@
 <!-- Facebook Buttons HTML -->
 <div class="fb-like"
      data-href="https://cryptomanana.karavasilev.info"
+     data-width="320"
      data-layout="button_count"
      data-action="like"
-     data-size="small"
-     data-show-faces="true"
+     data-size="large"
      data-share="true">
 </div>
 
 <!-- Facebook Buttons JS -->
 <div id="fb-root"></div>
-
-<script async defer crossorigin="anonymous"
-        src="https://connect.facebook.net/bg_BG/sdk.js#xfbml=1&version=v3.2">
+<script async
+        defer
+        crossorigin="anonymous"
+        nonce="bZAHqTMJ"
+        src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v10.0">
 </script>
