--- a/_includes/section_navigation_buttons.html
+++ b/_includes/section_navigation_buttons.html
@@ -1,2 +1,3 @@
-[{{ page.navigation.previous.title }}]({{ page.navigation.previous.url }}){: .previous_section_button}
-[{{ page.navigation.next.title }}]({{ page.navigation.next.url }}){: .next_section_button}
+{% if page.navigation.previous %}[{{ page.navigation.previous.title }}]({{ page.navigation.previous.url }}){: .previous_section_button}{% endif %}
+{% if page.navigation.next %}[{{ page.navigation.next.title }}]({{ page.navigation.next.url }}){: .next_section_button}{% endif %}
+<br>
