--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -63,5 +63,9 @@
     ga('send', 'pageview');
 </script>
 {% endif %}
+
+<script async defer src="{{ '/assets/scripts/code_copy.min.js?v=' | append: site.github.build_revision | relative_url }}">
+</script>
+
 </body>
 </html>
