Made a few SEO improvements and changed the layout of the home page.

--- a/_includes/facebook_buttons.html
+++ b/_includes/facebook_buttons.html
@@ -1,5 +1,5 @@
 <!-- Facebook Buttons HTML -->
-<div class="fb-like"
+<div id="facebook_buttons_list" class="fb-like centered_item"
      data-href="https://cryptomanana.karavasilev.info"
      data-width="320"
      data-layout="button_count"
