--- a/_includes/github_buttons.html
+++ b/_includes/github_buttons.html
@@ -1,5 +1,5 @@
 <!-- Github Buttons HTML -->
-<div class="centered_item">
+<div id="github_buttons_list" class="centered_item">
     <a class="github-button"
        href="https://github.com/TonyKaravasilev/CryptoManana"
        data-icon="octicon-star"
