--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" type="text/css" media="screen" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
 
     {% seo %}
+    <meta property="og:type" content="website"/>
+    <meta property="fb:app_id" content="174638235908302"/>
 </head>
 
 <body>
@@ -24,7 +26,7 @@
         <a id="forkme_banner" href="{{ site.github.repository_url }}">View on GitHub</a>
         {% endif %}
 
-        <h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
+        <h1 id="project_title" itemscope itemtype="https://schema.org/Guide">{{ site.title | default: site.github.repository_name }}</h1>
         <h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2>
 
         {% if site.show_downloads %}
