--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -38,7 +38,6 @@ div#github_buttons_list {
 
 div#facebook_buttons_list {
   padding-bottom: 2px;
-  padding-left: 22px;
 }
 
 ul.breadcrumb {
@@ -196,7 +195,7 @@ a.back_button:hover {
 .centered_item {
   vertical-align: middle;
   text-align: center;
-  display: block;
+  display: block !important;
   margin-left: auto;
   margin-right: auto;
   width: 95%;
