Improved the search engine scraping by adding keywords.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,10 @@
     <link rel="stylesheet" type="text/css" media="screen" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
 
     {% seo %}
+    <meta name="keywords"
+          content="CryptoManana, CryptoMañana, Тони Каравасилев, Tony Karavasilev, тони, каравасилев, tony, karavasilev, PHP, php, project, framework, documentation, cryptomañana, cryptomanana, cryptography, model, object-oriented, cryptography framework, cryptography model, package, PhD, security, cybersecurity, openssl, libsodium, sodium, hash, encryption, signature, exchange, service, protocol, crypto, website"
+    />
+
     <meta property="og:type" content="website"/>
     <meta property="fb:app_id" content="174638235908302"/>
 </head>
