--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -32,12 +32,14 @@ div#badges_list a img {
   margin: 0 1px 0 1px;
 }
 
-div#github_buttons_list {
-  padding-bottom: 10px;
+sub {
+  font-size: smaller;
+  vertical-align: sub;
 }
 
-div#facebook_buttons_list {
-  padding-bottom: 2px;
+sup {
+  font-size: smaller;
+  vertical-align: super;
 }
 
 ul.breadcrumb {
