--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -156,6 +156,16 @@ a.back_button:hover {
   color: #f5f5f5;
 }
 
+#open_preferences_center {
+  text-decoration: none;
+  font-size: smaller;
+}
+
+#open_preferences_center:hover {
+  font-weight: bold;
+  font-size: large;
+}
+
 .code-block-header {
   display: flex;
   background-color: #f8f8f7;
@@ -192,6 +202,13 @@ a.back_button:hover {
       content: "✔";
     }
   }
+}
+
+.noscript_content {
+  color: #f5f5f5;
+  font-size: xx-large;
+  font-weight: bold;
+  padding: 2px 2px 2px 2px;
 }
 
 .centered_item {
